CSS fixes: * Font quick fix (will it work?), * Code block horizontal scroll bar when needed.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -845,4 +845,5 @@ code{
   @extend .pad5a;
 
   display: block;
+  overflow-x: auto;
 }
